--- a/septa-fare-calculator/src/Main.module.css
+++ b/septa-fare-calculator/src/Main.module.css
@@ -1,3 +1,15 @@
-.header {
-  color: red;
+.container {
+  border-style: solid;
+  border-color: #dddddd;
+  border-width: 2px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  width: 645px;
+}
+
+.container > *:not(:last-child) {
+  border-bottom-style: solid;
+  border-bottom-color: #dddddd;
+  border-bottom-width: 1px;
 }
