--- a/septa-fare-calculator/src/components/TotalFareCostView.module.css
+++ b/septa-fare-calculator/src/components/TotalFareCostView.module.css
@@ -1,10 +1,12 @@
 .container {
   align-items: center;
+  background-color: #595959;
+  color: white;
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 10px;
   justify-content: center;
-  padding: 45px;
+  padding: 24px;
 }
 
 .title {
@@ -12,11 +14,8 @@
   font-size: 24pt;
 }
 
-.numberInput {
-  border-radius: 6px;
+.costDisplay {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 24pt;
-  padding: 16px;
-  text-align: center;
-  width: 200px;
+  font-size: 64pt;
+  font-weight: bold;
 }
